--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,4 +7,21 @@ body {
     align-content: center;
     padding: 0px;
     box-sizing: border-box;
+
+    .mainpage {
+        animation-name: fadein;
+        animation-duration: 3s;
+
+    }
+}
+
+@keyframes fadein {
+    0% {
+        opacity: 0.1;
+        ;
+    }
+
+    100% {
+        opacity: 0.1;
+    }
 }
