--- a/sass/base/_desktop.scss
+++ b/sass/base/_desktop.scss
@@ -105,9 +105,8 @@
     }
 
     .mainpage {
-        margin-left: 100px;
-        margin-right: 100px;
         max-width: 100%;
+        max-height: 100%;
     }
 
     .description {
