--- a/sass/layout/loader.scss
+++ b/sass/layout/loader.scss
@@ -61,3 +61,19 @@
       overflow: hidden;
    }
 }
+
+body .mainpage {
+   animation-name: fadein;
+   animation-duration: 3s;
+ }
+
+ @keyframes fadein {
+   0% {
+     opacity: 0.1;
+     ;
+   }
+
+   100% {
+     opacity: 0.1;
+   }
+ }
