--- a/CSS/style.css
+++ b/CSS/style.css
@@ -599,9 +599,15 @@ img {
 
 /********************** Last update **********************/
 
+.items {
+  padding: 0px 0px 0px 0px;
+  margin: 0px 0px;
+}
+
 .menu-item {
   animation: fadeIn 1s ease-in-out;
   animation-fill-mode: both;
+  list-style-type: none;
 }
 
 .menu-item:nth-child(1) {
@@ -621,6 +627,7 @@ img {
     opacity: 0;
     transform: translateY(10px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -862,33 +869,4 @@ footer ul li .fa-handshake-angle {
       opacity: 0.1;
     }
   }
-
-  .menu-item {
-    animation: fadeIn 1s ease-in-out;
-    animation-fill-mode: both;
-  }
-  
-  .menu-item:nth-child(1) {
-    animation-delay: 0.3s;
-  }
-  
-  .menu-item:nth-child(2) {
-    animation-delay: 0.6s;
-  }
-  
-  .menu-item:nth-child(3) {
-    animation-delay: 0.9s;
-  }
-  
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: translateY(10px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-  
 }
